--- a/Balls(WinForm)/Balls(WinForm)/Balls(WinForm).csproj
+++ b/Balls(WinForm)/Balls(WinForm)/Balls(WinForm).csproj
@@ -46,12 +46,15 @@
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="YamlSerializer, Version=0.9.0.2, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\YamlSerializer.1.0\lib\Net35\YamlSerializer.dll</HintPath>
+      <HintPath>..\packages\YamlSerializerNet.1.1\lib\Net35\YamlSerializer.dll</HintPath>
       <Private>True</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Ball.cs" />
+    <Compile Include="Ball.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="BallMemento.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
