--- a/Drawing(WinForm)/Drawing(WinForm)/Drawing(WinForm).csproj
+++ b/Drawing(WinForm)/Drawing(WinForm)/Drawing(WinForm).csproj
@@ -53,6 +53,8 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Formats\Abstract\IFormat.cs" />
+    <Compile Include="Formats\Concrete\BaseFormat.cs" />
+    <Compile Include="Formats\Factory.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
@@ -80,9 +82,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Formats\Concrete\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
