Add class, small fixes

--- a/VectorDrawing(WinForm)/VectorDrawing(WinForm)/VectorDrawing(WinForm).csproj
+++ b/VectorDrawing(WinForm)/VectorDrawing(WinForm)/VectorDrawing(WinForm).csproj
@@ -79,6 +79,7 @@
     <Compile Include="Shapes\Concrete\Rectangle.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Util\XData.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
