--- a/VectorDrawing(WinForm)/VectorDrawing(WinForm)/VectorDrawing(WinForm).csproj
+++ b/VectorDrawing(WinForm)/VectorDrawing(WinForm)/VectorDrawing(WinForm).csproj
@@ -51,15 +51,17 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Factory\SwitchFactory.cs" />
+    <Compile Include="Factories\ColorFactory.cs" />
+    <Compile Include="Factories\FormatFactory.cs" />
+    <Compile Include="Factories\ShapeFactory.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Memento\PctbxMemento.cs" />
-    <Compile Include="Memento\ShapeMemento.cs" />
+    <Compile Include="Serialization\Memento\PctbxMemento.cs" />
+    <Compile Include="Serialization\Memento\ShapeMemento.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serialization\Abstract\IFormat.cs" />
@@ -79,6 +81,7 @@
     <Compile Include="Shapes\Concrete\Rectangle.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Util\XData.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
