-add context menu for shapes -made some refactoring -fix some bugs

--- a/VectorDrawing(WinForm)/VectorDrawing(WinForm)/VectorDrawing(WinForm).csproj
+++ b/VectorDrawing(WinForm)/VectorDrawing(WinForm)/VectorDrawing(WinForm).csproj
@@ -53,6 +53,8 @@
   <ItemGroup>
     <Compile Include="Factories\ColorFactory.cs" />
     <Compile Include="Factories\FormatFactory.cs" />
+    <Compile Include="Factories\NumColorFactory.cs" />
+    <Compile Include="Factories\NumTypeFactory.cs" />
     <Compile Include="Factories\ShapeFactory.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
