--- a/VectorDrawing(WinForm)/VectorDrawing(WinForm)/VectorDrawing(WinForm).csproj
+++ b/VectorDrawing(WinForm)/VectorDrawing(WinForm)/VectorDrawing(WinForm).csproj
@@ -70,8 +70,8 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Locale.ru-RU.resx</DependentUpon>
     </Compile>
-    <Compile Include="Serialization\Memento\PctbxMemento.cs" />
-    <Compile Include="Serialization\Memento\ShapeMemento.cs" />
+    <Compile Include="Memento\PctbxMemento.cs" />
+    <Compile Include="Memento\ShapeMemento.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serialization\Abstract\IFormat.cs" />
@@ -85,6 +85,7 @@
     <Compile Include="Shapes\XData.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
