--- a/PersonsCRM/WebUI/Web.config
+++ b/PersonsCRM/WebUI/Web.config
@@ -8,6 +8,13 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+
+  <connectionStrings>
+    <add name="DefaultConnection"
+    connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename='|DataDirectory|\PersonsDB.mdf';Integrated Security=True"
+ providerName="System.Data.SqlClient"/>
+  </connectionStrings>
+
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -17,11 +24,12 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
-  <pages>
+    <pages>
       <namespaces>
         <add namespace="GridMvc" />
       </namespaces>
-    </pages></system.web>
+    </pages>
+  </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
