--- a/PersonsCRM/WebUI/Web.config
+++ b/PersonsCRM/WebUI/Web.config
@@ -10,7 +10,7 @@
   </configSections>
 
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDB)\v11.0;AttachDbFilename='|DataDirectory|\PersonsDB.mdf';Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDB)\mssqllocaldb;AttachDbFilename='|DataDirectory|\PersonsDB.mdf';Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <appSettings>
