--- a/PersonsCRM/DAL/packages.config
+++ b/PersonsCRM/DAL/packages.config
@@ -1,6 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CassandraCSharpDriver" version="3.0.1" targetFramework="net452" />
+  <package id="Cassandraemon" version="1.0.6" targetFramework="net452" />
   <package id="Dapper" version="1.42" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="LiteDB" version="1.0.4" targetFramework="net452" />
+  <package id="lz4net" version="1.0.5.93" targetFramework="net452" />
+  <package id="ServiceStack.Common" version="4.0.52" targetFramework="net452" />
+  <package id="ServiceStack.Interfaces" version="4.0.52" targetFramework="net452" />
+  <package id="ServiceStack.Redis" version="4.0.52" targetFramework="net452" />
+  <package id="ServiceStack.Text" version="4.0.52" targetFramework="net452" />
 </packages>
