--- a/PersonsCRM/DAL/packages.config
+++ b/PersonsCRM/DAL/packages.config
@@ -1,11 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CassandraCSharpDriver" version="3.0.1" targetFramework="net452" />
-  <package id="Cassandraemon" version="1.0.6" targetFramework="net452" />
   <package id="Dapper" version="1.42" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net452" />
   <package id="LiteDB" version="1.0.4" targetFramework="net452" />
   <package id="lz4net" version="1.0.5.93" targetFramework="net452" />
+  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net452" />
+  <package id="Neo4jClient" version="1.1.0.24" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net452" />
+  <package id="NHibernate" version="4.0.4.4000" targetFramework="net452" />
   <package id="ServiceStack.Common" version="4.0.52" targetFramework="net452" />
   <package id="ServiceStack.Interfaces" version="4.0.52" targetFramework="net452" />
   <package id="ServiceStack.Redis" version="4.0.52" targetFramework="net452" />
