--- a/PersonsCRM/WebUI/Web.config
+++ b/PersonsCRM/WebUI/Web.config
@@ -8,6 +8,9 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <connectionStrings>
+    <add name="WebUIContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=WebUIContext-20160201095632; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|WebUIContext-20160201095632.mdf" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
