--- a/Phonebook/DAL/DAL.csproj
+++ b/Phonebook/DAL/DAL.csproj
@@ -50,9 +50,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DB\Abstract\IRepository.cs" />
+    <Compile Include="DB\Abstract\IDalUnitOfWork.cs" />
     <Compile Include="DB\Concrete\EfAddressesRepository.cs" />
     <Compile Include="DB\Concrete\EfDbContext.cs" />
     <Compile Include="DB\Concrete\EfPersonsRepository.cs" />
+    <Compile Include="DB\Concrete\EfUnitOfWork.cs" />
     <Compile Include="Entities\Address.cs" />
     <Compile Include="Entities\Person.cs" />
     <Compile Include="Entities\Phone.cs" />
