--- a/Phonebook/DAL/DAL.csproj
+++ b/Phonebook/DAL/DAL.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{385D500E-B962-4C32-99B2-E1A1196B9F2C}</ProjectGuid>
+    <ProjectGuid>{6480A569-5378-4C47-9B0E-2983F6DF1A97}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DAL</RootNamespace>
@@ -49,16 +49,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DB\Abstract\IRepository.cs" />
-    <Compile Include="DB\Abstract\IDalUnitOfWork.cs" />
-    <Compile Include="DB\Concrete\EfAddressesRepository.cs" />
-    <Compile Include="DB\Concrete\EfDbContext.cs" />
-    <Compile Include="DB\Concrete\EfPersonsRepository.cs" />
-    <Compile Include="DB\Concrete\EfUnitOfWork.cs" />
-    <Compile Include="Entities\Address.cs" />
+    <Compile Include="EF\AppContext.cs" />
+    <Compile Include="Entities\Street.cs" />
     <Compile Include="Entities\Person.cs" />
     <Compile Include="Entities\Phone.cs" />
+    <Compile Include="Interfaces\IRepository.cs" />
+    <Compile Include="Interfaces\IDalUnitOfWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\EfUnitOfWork.cs" />
+    <Compile Include="Repositories\PersonRepository.cs" />
+    <Compile Include="Repositories\PhoneRepository.cs" />
+    <Compile Include="Repositories\StreetRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -66,7 +67,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Cross-Cutting\Cross-Cutting.csproj">
-      <Project>{61ff0736-dde9-4aa0-87c6-d63ba7588945}</Project>
+      <Project>{fa375ae9-f052-467e-8d58-ea44ec757daa}</Project>
       <Name>Cross-Cutting</Name>
     </ProjectReference>
   </ItemGroup>
